--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Hojun's Blog
 description: 개발자 정호준의 GitHub 페이지입니다.
-theme: minima
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme
 
