--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
 title: Hojun's Blog
 description: 개발자 정호준의 GitHub 페이지입니다.
-remote_theme: pages-themes/slate@v0.2.0
-
-plugins:
-  - jekyll-remote-theme
-
+theme: minima
